--- a/urlshort/main/urls.yaml
+++ b/urlshort/main/urls.yaml
@@ -2,3 +2,7 @@
   url: https://google.com
 - path: /twitter
   url: https://twitter.com
+- path: /my-github
+  url: https://github.com/dhwaneetbhatt
+- path: /gophercises
+  url: https://gophercises.com
